# classgo

./: .gitignore  Pipfile  setup.cfg  setup.py
class_go/: __init__.py  converter.py  db.py  schema.py  scripts.py
class_go/data/: data.db
class_go/database/: data.db
classgo.egg-info/: PKG-INFO
go_class/: db.py  scripts.py
