[metadata]
name                            =   goclass
version                         =   0.1.dev1
author                          =   Francisco Carvajal Ossa
author_email                    =   fraco_oxza@outlook.com
license                         =   MIT
plataform                       =   Linux
description                     =   a simplem program to manage class
long_description                =   file: README.md
long_description_content_type   =   text/markdown

[options]
packages                        =   find:
python_requires                 =   >=3.6